Reducing usage of guava libraries in dexlib2 and dexlib2/base