@@ -30,14 +30,12 @@
 
 package com.android.tools.smali.dexlib2;
 
+import static java.util.Collections.unmodifiableList;
+
 import com.android.tools.smali.dexlib2.iface.DexFile;
 import com.android.tools.smali.dexlib2.iface.MultiDexContainer;
 import com.android.tools.smali.dexlib2.iface.MultiDexContainer.DexEntry;
-import com.google.common.base.Joiner;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
-import com.google.common.io.ByteStreams;
-import com.google.common.io.Files;
+
 import com.android.tools.smali.dexlib2.dexbacked.DexBackedDexFile;
 import com.android.tools.smali.dexlib2.dexbacked.DexBackedDexFile.NotADexFile;
 import com.android.tools.smali.dexlib2.dexbacked.DexBackedOdexFile;
@@ -48,6 +46,7 @@ import com.android.tools.smali.dexlib2.dexbacked.ZipDexContainer;
 import com.android.tools.smali.dexlib2.dexbacked.ZipDexContainer.NotAZipFileException;
 import com.android.tools.smali.dexlib2.writer.pool.DexPool;
 import com.android.tools.smali.util.ExceptionWithContext;
+import com.android.tools.smali.util.StringUtils;
 
 import java.io.BufferedInputStream;
 import java.io.File;
@@ -57,6 +56,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
+
+import java.util.ArrayList;
 import java.util.List;
 
 public final class DexFileFactory {
@@ -395,10 +396,10 @@ public final class DexFileFactory {
             }
 
             // find all full and partial matches
-            List<String> fullMatches = Lists.newArrayList();
-            List<MultiDexContainer.DexEntry<? extends DexBackedDexFile>> fullEntries = Lists.newArrayList();
-            List<String> partialMatches = Lists.newArrayList();
-            List<MultiDexContainer.DexEntry<? extends DexBackedDexFile>> partialEntries = Lists.newArrayList();
+            List<String> fullMatches = new ArrayList<>();
+            List<MultiDexContainer.DexEntry<? extends DexBackedDexFile>> fullEntries = new ArrayList<>();
+            List<String> partialMatches = new ArrayList<>();
+            List<MultiDexContainer.DexEntry<? extends DexBackedDexFile>> partialEntries = new ArrayList<>();
             for (String entry: dexContainer.getDexEntryNames()) {
                 if (fullEntryMatch(entry, targetEntry)) {
                     // We want to grab all full matches, regardless of whether they're actually a dex file.
@@ -430,7 +431,8 @@ public final class DexFileFactory {
                 // only by an initial path separator. e.g. "/blah/blah.dex" and "blah/blah.dex"
                 throw new MultipleMatchingDexEntriesException(String.format(
                         "Multiple entries in %s match %s: %s", filename, targetEntry,
-                        Joiner.on(", ").join(fullMatches)));
+                        StringUtils.join(fullMatches, ", ")
+                        ));
             }
 
             if (partialEntries.size() == 0) {
@@ -440,7 +442,8 @@ public final class DexFileFactory {
             if (partialEntries.size() > 1) {
                 throw new MultipleMatchingDexEntriesException(String.format(
                         "Multiple dex entries in %s match %s: %s", filename, targetEntry,
-                        Joiner.on(", ").join(partialMatches)));
+                        StringUtils.join(partialMatches, ", ")
+                        ));
             }
             return partialEntries.get(0);
         }
@@ -456,7 +459,7 @@ public final class DexFileFactory {
         }
 
         @Nonnull @Override public List<String> getDexEntryNames() {
-            return ImmutableList.of(entryName);
+            return unmodifiableList(List.of(entryName));
         }
 
         @Nullable @Override public DexEntry<DexBackedDexFile> getEntry(@Nonnull String entryName) {
@@ -494,7 +497,7 @@ public final class DexFileFactory {
 
         public FilenameVdexProvider(File oatFile) {
             File oatParent = oatFile.getAbsoluteFile().getParentFile();
-            String baseName = Files.getNameWithoutExtension(oatFile.getAbsolutePath());
+            String baseName = getNameWithoutExtension(oatFile.getAbsolutePath());
             vdexFile = new File(oatParent, baseName + ".vdex");
         }
 
@@ -515,7 +518,10 @@ public final class DexFileFactory {
 
                 if (candidateFile.exists()) {
                     try {
-                        buf = ByteStreams.toByteArray(new FileInputStream(candidateFile));
+                        FileInputStream fis = new FileInputStream(candidateFile);
+                        int fileSize = fis.available();
+                        buf = new byte[fileSize];
+                        fis.read(buf);
                     } catch (FileNotFoundException e) {
                         buf = null;
                     } catch (IOException ex) {
@@ -527,5 +533,11 @@ public final class DexFileFactory {
 
             return buf;
         }
+
+        public static String getNameWithoutExtension(String file) {
+            String fileName = new File(file).getName();
+            int dotIndex = fileName.lastIndexOf('.');
+            return (dotIndex == -1) ? fileName : fileName.substring(0, dotIndex);
+          }
     }
 }
